turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:12: error: value balck is not a member of object java.awt.Color
      setCouleur(Color.balck)
                       ^