turtleart.disktwo.DiskTwo.scala.code
override def run() {
  for (i<-1 to 18){
    for(j<-1 to 90){
      avance(100)
      recule(100)
      droite(1)
    }
    if(i%2==0){
      setCouleur(Color.red)
    }
    else
      setCouleur(Color.balck)
    }
}
